[tool.poetry]
name = "sigsplat"
version = "0.1.0"
description = "Signal processing toolbox"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blimpy = "2.1.4"
matplotlib = "3.9"
numpy = "2.1.0"
python-dateutil = "2.9.0.post0"
scipy = "1.14.0"
sigmf = "1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
